# TMCiC

./: .gitattributes  .gitignore  CMakeLists.txt  main.c  pDef_v1_12_2_2.c  pDef_v1_12_2_2.h
.cmake/api/v1/reply/: cache-v2-0da1433afaac90e372d8.json  cmakeFiles-v1-d94abb9c43f52536a808.json  codemodel-v2-5e0ab112d3f341fc5bc8.json  index-2024-10-24T02-44-34-0009.json  target-mcbc6-Debug-dd8b2444bc5e87ec3d97.json
Chunk/: Chunk.c
Client/: client.h
Defs/: ChunkDef.h  ChunkHashFunc.c  ChunkHashFunc.h  ClientDef.h  ColliderDefs.c  ColliderDefs.h  ErrorCodes.h  PacketDef.h  Physics.h  StdIdDef.h  TPoint2d.h  isInSortedArr.c  isInSortedArr.h
Parser/: parser.c  parser.h
Parser/Interpreter/: Interpreter.c  Interpreter.h
Public/: public_getBlockAtCoords.c  public_getBlockAtCoords.h
Std/: internal_std_getBlockAtVec3.c  internal_std_getBlockAtVec3.h  internal_std_getChunk.c  internal_std_getChunk.h  internal_std_getClientChunk.c  internal_std_getClientChunk.h  internal_std_isOnGround.c  internal_std_isOnGround.h
TVarInt/: TVarInt.h  TVarint.c  sharedmain.c  sharedmain.h
Versions/v1_12_2/: chunkData.c  chunkData.h  defaultGeneralHandler.c  defaultGeneralHandler.h  pDef_v1_12_2_2.h
Versions/v1_12_2/Deserializer/: v1_12_2_blockChange.c  v1_12_2_blockChange.h  v1_12_2_chunkData.c  v1_12_2_chunkData.h  v1_12_2_multiBlockChange.c  v1_12_2_multiBlockChange.h
Versions/v1_12_2/HshakeAndLogin/: HshakeAndLogin.c  HshakeAndLogin.h
Versions/v1_12_2/Interpreter/: Interpreter.c  Interpreter.h  chunk.txt  v1_12_2_Interpreter.c  v1_12_2_Interpreter.h
crossSocket/: crossSocket.c  crossSocket.h
file_io/: file_io.c  file_io.h
stdPackets/: disconnect.c  disconnect.h  keepAlive.c  keepAlive.h  playerPositionAndLook.c  playerPositionAndLook.h  setCompression.h  stdPackets.h
stdPackets/Deserializer/: disconnect.h  playerPositionAndLook.c  playerPositionAndLook.h  setCompression.c
stdPackets/Serialize/: teleportConfirm.c  teleportConfirm.h
stdPackets/Serializer/: teleportConfirm.c
zlib-1.3.1/contrib/dotzlib/DotZLib/: UnitTests.cs
